- bug fix on misalign design in site option

--- a/css/dewslandslide/data_analysis/site_analysis.css
+++ b/css/dewslandslide/data_analysis/site_analysis.css
@@ -18,9 +18,8 @@
 /*.analysis{
     margin-top: 115px;
 }*/
-/*.panel-body {
-      display: table-caption !important;;
-
+/*.site-panel{
+      display: table-caption !important;
 }*/
 .breadcrumb {
     background-color: rgba(245, 245, 245, 0) !important;
